--- a/rawML/Linear.ipynb
+++ b/rawML/Linear.ipynb
@@ -66,7 +66,7 @@
     "            x_out = l(x_out)\n",
     "        return x_out\n",
     "    def train(self,x_in,y_true, epochs=1):\n",
-    "        # assert len(x_in) == len(y_true) \"Input vector and Output vector batch size should be equal!\"\n",
+    "        # assert (len(x_in) == len(y_true)) \"Input vector and Output vector batch size should be equal!\"\n",
     "        for i in range(epochs):\n",
     "            x_list=[]\n",
     "            x_list.append(x_in)\n",
